environments/dev/app-poc/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
  namespace: app-poc
spec:
  selector:
    app: web-api
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
